--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,35 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-    <parent>
-    	<groupId>io.onedev</groupId>
-    	<artifactId>parent</artifactId>
-    	<version>1.0.3</version>
-    </parent>
-    <artifactId>k8s-helper</artifactId>  
-    <version>1.0.0</version>  
+	<parent>
+		<groupId>io.onedev</groupId>
+		<artifactId>parent</artifactId>
+		<version>1.0.3</version>
+	</parent>
+	<artifactId>k8s-helper</artifactId>
+	<version>1.0.0</version>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.1.1</version>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<includeScope>compile</includeScope>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 	<repositories>
 		<repository>
 			<id>pmeaseRepo</id>
@@ -50,7 +72,7 @@
 		</dependency>
 	</dependencies>
 	<properties>
-		<commons.version>1.1.2</commons.version>
+		<commons.version>1.1.3</commons.version>
 		<jersey.version>2.13</jersey.version>
 		<jackson.version>2.9.8</jackson.version>
 	</properties>
