--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<version>1.0.3</version>
 	</parent>
 	<artifactId>k8s-helper</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1</version>
 	<build>
 		<plugins>
 			<plugin>
@@ -61,19 +61,18 @@
 			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>${jackson.version}</version>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
+		    <groupId>org.glassfish.jersey.media</groupId>
+		    <artifactId>jersey-media-json-jackson</artifactId>
+		    <version>${jersey.version}</version>
 		</dependency>
 	</dependencies>
 	<properties>
-		<commons.version>1.1.3</commons.version>
-		<jersey.version>2.13</jersey.version>
-		<jackson.version>2.9.8</jackson.version>
+		<commons.version>1.1.4</commons.version>
+		<jersey.version>2.26</jersey.version>
 	</properties>
 </project>
