--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -1,5 +1,5 @@
-ARG version
-FROM mcr.microsoft.com/windows/servercore:$version
+ARG osVersion
+FROM mcr.microsoft.com/windows/servercore:$osVersion
 RUN cmd /c @"%SystemRoot%\System32\WindowsPowerShell\v1.0\powershell.exe" -NoProfile -InputFormat None -ExecutionPolicy Bypass -Command "iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))" && SET "PATH=%PATH%;%ALLUSERSPROFILE%\chocolatey\bin"
 RUN choco install git --version 2.22.0 -y
 RUN choco install openjdk --version 11.0.2.01 -y
