--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -38,7 +38,7 @@ jobs:
   image: alpine/git:1.0.7
   commands:
   - git config --global --unset http.extraHeader
-  - git push -f https://robinshine:@secrets:github-password@\@github.com/theonedev/k8s-helper
+  - git push -f https://robinshine:@secrets:github-token@\@github.com/theonedev/k8s-helper
     HEAD:master
   triggers:
   - !BranchUpdateTrigger
