--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -1,53 +1,73 @@
-version: 1
+version: 6
 jobs:
 - name: Release
-  image: 1dev/build-environment:1.1
-  commands:
-  - set -e
-  - docker login -u robinshen -p @secrets:dockerhub-password@
-  - ''
-  - echo "Detecting project version (may require some time while downloading maven
-    dependencies)..."
-  - buildVersion=$(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version
-    -q -DforceStdout)
-  - echo "##onedev[SetBuildVersion '$buildVersion']"
-  - ''
-  - mvn deploy -Dmaven.deploy.password=@secrets:maven-deploy-password@
-  - ''
-  - docker build -t 1dev/k8s-helper-linux:$buildVersion -f Dockerfile.linux .
-  - docker push 1dev/k8s-helper-linux:$buildVersion
+  steps:
+  - !CheckoutStep
+    name: checkout
+    cloneCredential: !DefaultCredential {}
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: detect build version
+    image: 1dev/build-environment:1.1
+    commands:
+    - set -e
+    - echo "Detecting project version (may require some time while downloading maven
+      dependencies)..."
+    - echo $(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version
+      -q -DforceStdout) > buildVersion
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !SetBuildVersionStep
+    name: set build version
+    buildVersion: '@file:buildVersion@'
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: build & deploy
+    image: 1dev/build-environment:1.1
+    commands:
+    - set -e
+    - docker login -u robinshen -p @secrets:dockerhub-password@
+    - ''
+    - mvn deploy -Dmaven.deploy.password=@secrets:maven-deploy-password@
+    - ''
+    - docker build -t 1dev/k8s-helper-linux:$buildVersion -f Dockerfile.linux .
+    - docker push 1dev/k8s-helper-linux:$buildVersion
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CreateTagStep
+    name: 'create tag '
+    tagName: v@build_version@
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
   - !BranchUpdateTrigger
     branches: main
-  retrieveSource: true
-  cloneCredential: !DefaultCredential {}
-  cpuRequirement: 250m
-  memoryRequirement: 128m
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
+  cpuRequirement: 250m
+  memoryRequirement: 128m
   caches:
   - key: maven-cache
     path: /root/.m2/repository
   timeout: 3600
-  postBuildActions:
-  - !CreateTagAction
-    condition: successful
-    tagName: v@build_version@
 - name: Sync with GitHub
-  image: alpine/git:1.0.7
-  commands:
-  - git config --global --unset http.extraHeader
-  - git push -f https://robinshine:@secrets:github-token@@@github.com/theonedev/k8s-helper
-    HEAD:main
+  steps:
+  - !CheckoutStep
+    name: checkout
+    cloneCredential: !DefaultCredential {}
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: sync
+    image: alpine/git:1.0.7
+    commands:
+    - git config --global --unset http.extraHeader
+    - git push -f https://robinshine:@secrets:github-token@@@github.com/theonedev/k8s-helper
+      HEAD:main
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
   - !BranchUpdateTrigger
     branches: main
-  retrieveSource: true
-  cloneCredential: !DefaultCredential {}
-  cpuRequirement: 250m
-  memoryRequirement: 128m
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
+  cpuRequirement: 250m
+  memoryRequirement: 128m
   timeout: 3600
