Git LFS support

--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -1,5 +1,5 @@
 # do not use alpine image here to avoid the issue that git can not be configured to trust specified certificate when connecting to a https url
 FROM openjdk:8u212-jre-slim
-RUN apt-get update && apt-get install -y git
+RUN apt-get update && apt-get install -y git git-lfs
 COPY target/*.jar /k8s-helper/
 COPY target/lib/*.jar /k8s-helper/
