--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -1,10 +1,12 @@
-version: 6
+version: 13
 jobs:
 - name: Release
   steps:
   - !CheckoutStep
     name: checkout
     cloneCredential: !DefaultCredential {}
+    withLfs: false
+    withSubmodules: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !CommandStep
     name: detect build version
@@ -15,6 +17,7 @@ jobs:
       dependencies)..."
     - echo $(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version
       -q -DforceStdout) > buildVersion
+    useTTY: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !SetBuildVersionStep
     name: set build version
@@ -31,6 +34,7 @@ jobs:
     - ''
     - docker build -t 1dev/k8s-helper-linux:@build_version@ -f Dockerfile.linux .
     - docker push 1dev/k8s-helper-linux:@build_version@
+    useTTY: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !CreateTagStep
     name: 'create tag '
@@ -42,8 +46,8 @@ jobs:
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
-  cpuRequirement: 250m
-  memoryRequirement: 128m
+  cpuRequirement: 250
+  memoryRequirement: 128
   caches:
   - key: maven-cache
     path: /root/.m2/repository
@@ -53,6 +57,8 @@ jobs:
   - !CheckoutStep
     name: checkout
     cloneCredential: !DefaultCredential {}
+    withLfs: false
+    withSubmodules: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !CommandStep
     name: sync
@@ -61,13 +67,15 @@ jobs:
     - git config --global --unset http.extraHeader
     - git push -f https://robinshine:@secrets:github-token@@@github.com/theonedev/k8s-helper
       HEAD:main
+    useTTY: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
   - !BranchUpdateTrigger
     branches: main
+    projects: onedev/k8s-helper
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
-  cpuRequirement: 250m
-  memoryRequirement: 128m
+  cpuRequirement: 250
+  memoryRequirement: 128
   timeout: 3600
