--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -1,6 +1,8 @@
 ARG osVersion
 FROM mcr.microsoft.com/windows/servercore:$osVersion
 RUN cmd /c @"%SystemRoot%\System32\WindowsPowerShell\v1.0\powershell.exe" -NoProfile -InputFormat None -ExecutionPolicy Bypass -Command " [System.Net.ServicePointManager]::SecurityProtocol = 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))" && SET "PATH=%PATH%;%ALLUSERSPROFILE%\chocolatey\bin"
+
+# check issue https://code.onedev.io/projects/160/issues/597 if upgrade git
 RUN choco install git --version 2.22.0 -y
 RUN choco install git-lfs --version 2.13.3 -y
 RUN choco install openjdk --version 11.0.2.01 -y
