Use Java 11 as base image

--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -1,5 +1,5 @@
 # do not use alpine image here to avoid the issue that git can not be configured to trust specified certificate when connecting to a https url
-FROM openjdk:8u312-jre-slim
+FROM openjdk:11-jre-slim
 RUN apt-get update && apt-get install -y git git-lfs && rm -rf /var/lib/apt/lists/* 
 COPY docker /usr/local/bin/
 COPY nerdctl /usr/local/bin/
