--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -1,7 +1,4 @@
-version: 20
-properties:
-- name: buildEnvironment
-  value: 1dev/build-environment:1.5
+version: 25
 jobs:
 - name: Release
   steps:
@@ -18,10 +15,8 @@ jobs:
     interpreter: !DefaultInterpreter
       commands:
       - set -e
-      - echo "Detecting project version (may require some time while downloading maven
-        dependencies)..."
-      - echo $(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version
-        -q -DforceStdout) > buildVersion
+      - echo "Detecting project version (may require some time while downloading maven dependencies)..."
+      - echo $(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version -q -DforceStdout) > buildVersion
     useTTY: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !SetBuildVersionStep
@@ -39,8 +34,7 @@ jobs:
       - ''
       - mvn deploy -Dmaven.deploy.password=@secrets:maven-deploy-password@
       - ''
-      - docker build -t 1dev/k8s-helper-linux:@build_version@ -f Dockerfile.linux
-        .
+      - docker build -t 1dev/k8s-helper-linux:@build_version@ -f Dockerfile.linux .
       - docker push 1dev/k8s-helper-linux:@build_version@
     useTTY: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
@@ -74,8 +68,7 @@ jobs:
     interpreter: !DefaultInterpreter
       commands:
       - git config --global --unset http.extraHeader
-      - git push -f https://robinshine:@secrets:github-token@@@github.com/theonedev/k8s-helper
-        HEAD:main
+      - git push -f https://robinshine:@secrets:github-token@@@github.com/theonedev/k8s-helper HEAD:main
     useTTY: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
