--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -28,7 +28,7 @@ jobs:
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !BuildImageStep
     name: build docker image
-    tags: code.onedev.io:/onedev/k8s-helper-linux:@build_version@
+    tags: code.onedev.io/onedev/k8s-helper-linux:@build_version@
     publish: true
     builtInRegistryAccessTokenSecret: onedev-token
     removeDanglingImages: true
