--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
 	<parent>
 		<groupId>io.onedev</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.2.2</version>
+		<version>1.2.3</version>
 	</parent>
 	<artifactId>k8s-helper</artifactId>
-	<version>2.12.8</version>
+	<version>2.12.9</version>
 	<build>
 		<plugins>
 			<plugin>
@@ -42,7 +42,7 @@
 	<repositories>
 		<repository>
 			<id>onedev</id>
-			<url>https://code.onedev.io/onedev/server/~maven</url>
+			<url>https://code.onedev.io/onedev/~maven</url>
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>never</updatePolicy>
@@ -104,7 +104,7 @@
 		</dependency>
 	</dependencies>
 	<properties>
-		<commons.version>2.8.6</commons.version>
+		<commons.version>2.8.7</commons.version>
 		<jersey.version>2.26</jersey.version>
 		<sslcontext.version>7.4.11</sslcontext.version>
 	</properties>
