feat: Run rootless docker image in jobs steps (#899)

--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -28,9 +28,8 @@ jobs:
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !BuildImageStep
     name: build docker image
-    tags: code.onedev.io/onedev/k8s-helper-linux:@build_version@
+    tags: 1dev/k8s-helper-linux:@build_version@
     publish: true
-    builtInRegistryAccessTokenSecret: onedev-token
     removeDanglingImages: true
     moreOptions: --builder onedev --platform linux/amd64,linux/arm64
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
