--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -1,4 +1,4 @@
-version: 31
+version: 32
 imports:
 - projectPath: onedev
   revision: main
@@ -32,10 +32,9 @@ jobs:
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !BuildImageStep
     name: build docker image
-    tags: 1dev/k8s-helper-linux:@build_version@
-    publish: true
-    removeDanglingImages: true
-    moreOptions: --builder onedev --platform linux/amd64,linux/arm64
+    output: !RegistryOutput
+      tags: 1dev/k8s-helper-linux:@build_version@
+    platforms: linux/amd64,linux/arm64
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !CreateTagStep
     name: create tag
@@ -61,11 +60,11 @@ jobs:
     withSubmodules: false
     cloneDepth: 1
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
-  - !ScanDepVulnersStep
+  - !OsvVulnerScannerStep
     name: scan
     recursive: true
-    reportName: Dependency Vulnerabilities
     failThreshold: HIGH
+    reportName: Dependency Vulnerabilities
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   retryCondition: never
   maxRetries: 3
