--- a/pom.xml
+++ b/pom.xml
@@ -88,8 +88,8 @@
 		</dependency>
 		<dependency>
 			<groupId>io.github.hakky54</groupId>
-			<artifactId>sslcontext-kickstart</artifactId>
-			<version>${sslcontext.version}</version>
+			<artifactId>ayza</artifactId>
+			<version>${ayza.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
@@ -99,13 +99,13 @@
 		</dependency>
 		<dependency>
 			<groupId>io.github.hakky54</groupId>
-			<artifactId>sslcontext-kickstart-for-jetty</artifactId>
-			<version>${sslcontext.version}</version>
+			<artifactId>ayza-for-jetty</artifactId>
+			<version>${ayza.version}</version>
 		</dependency>
 	</dependencies>
 	<properties>
 		<commons.version>3.0.13</commons.version>
 		<jersey.version>2.38</jersey.version>
-		<sslcontext.version>7.4.11</sslcontext.version>
+		<ayza.version>10.0.0</ayza.version>
 	</properties>
 </project>
